<resources>
    <string name="app_name">Our Story</string>
    <string name="seleccionar_foto">Registrar📸</string>
    <string name="nuestra_historia">Nuestra historia</string>
    <string name="ver">Ver ❤️</string>
    <string name="by_bel_jose"><![CDATA[By: Bel & Jose ❤️]]></string>
    <string name="descripci_n">Descripción</string>
    <string name="imagetoupload">ImageToUpload</string>
    <string name="guardar">Guardar🫶</string>
    <string name="cancelar">Cancelar</string>
    <string name="t_tulo">Título</string>
    <string name="our_story">Our story</string>
    <string name="musicemojis">🎵❤️</string>
</resources>